logs/couchapp.log
Listing '.'...
Listing './bin'...
Listing './couchapp'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Couchapp-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/couchapp'...
Listing './lib/python3.5/site-packages/couchapp/autopush'...
Compiling './lib/python3.5/site-packages/couchapp/client.py'...
***   File "./lib/python3.5/site-packages/couchapp/client.py", line 115
    except ResourceError, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/couchapp/commands.py'...
***   File "./lib/python3.5/site-packages/couchapp/commands.py", line 69
    print doc.to_json()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/couchapp/generator.py'...
***   File "./lib/python3.5/site-packages/couchapp/generator.py", line 32
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/couchapp/hooks'...
Listing './lib/python3.5/site-packages/couchapp/hooks/compress'...
Compiling './lib/python3.5/site-packages/couchapp/macros.py'...
***   File "./lib/python3.5/site-packages/couchapp/macros.py", line 39
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/couchapp/templates'...
Listing './lib/python3.5/site-packages/couchapp/templates/app'...
Listing './lib/python3.5/site-packages/couchapp/templates/app/_attachments'...
Listing './lib/python3.5/site-packages/couchapp/templates/app/_attachments/script'...
Listing './lib/python3.5/site-packages/couchapp/templates/app/_attachments/style'...
Listing './lib/python3.5/site-packages/couchapp/templates/app/views'...
Listing './lib/python3.5/site-packages/couchapp/templates/app/views/recent-items'...
Listing './lib/python3.5/site-packages/couchapp/templates/functions'...
Listing './lib/python3.5/site-packages/couchapp/templates/vendor'...
Listing './lib/python3.5/site-packages/couchapp/templates/vendor/couchapp'...
Listing './lib/python3.5/site-packages/couchapp/templates/vendor/couchapp/_attachments'...
Compiling './lib/python3.5/site-packages/couchapp/util.py'...
***   File "./lib/python3.5/site-packages/couchapp/util.py", line 381
    except IOError, msg:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/couchapp/vendors'...
Listing './lib/python3.5/site-packages/couchapp/vendors/backends'...
Compiling './lib/python3.5/site-packages/couchapp/vendors/backends/git.py'...
***   File "./lib/python3.5/site-packages/couchapp/vendors/backends/git.py", line 34
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/couchapp/vendors/backends/hg.py'...
***   File "./lib/python3.5/site-packages/couchapp/vendors/backends/hg.py", line 35
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/http_parser'...
Listing './lib/python3.5/site-packages/http_parser-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/pathtools'...
Listing './lib/python3.5/site-packages/pathtools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/restkit'...
Compiling './lib/python3.5/site-packages/restkit/client.py'...
***   File "./lib/python3.5/site-packages/restkit/client.py", line 346
    except socket.gaierror, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restkit/contrib'...
Compiling './lib/python3.5/site-packages/restkit/contrib/console.py'...
***   File "./lib/python3.5/site-packages/restkit/contrib/console.py", line 189
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/contrib/ipython_shell.py'...
***   File "./lib/python3.5/site-packages/restkit/contrib/ipython_shell.py", line 50
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/restkit/datastructures.py'...
***   File "./lib/python3.5/site-packages/restkit/datastructures.py", line 162
    raise TypeError, "pop expected at most 2 arguments, got "\
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/errors.py'...
***   File "./lib/python3.5/site-packages/restkit/errors.py", line 32
    except (NameError, ValueError, KeyError), e:
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restkit/oauth2.py'...
***   File "./lib/python3.5/site-packages/restkit/oauth2.py", line 84
    except UnicodeDecodeError, le:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restkit-4.2.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/socketpool'...
Listing './lib/python3.5/site-packages/socketpool-0.5.3.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/testapp'...
Listing './lib/python3.5/site-packages/tests/testapp/_attachments'...
Listing './lib/python3.5/site-packages/tests/testapp/_attachments/style'...
Listing './lib/python3.5/site-packages/tests/testapp/_docs'...
Listing './lib/python3.5/site-packages/tests/testapp/_docs/.hideme'...
Listing './lib/python3.5/site-packages/tests/testapp/foo'...
Listing './lib/python3.5/site-packages/tests/testapp/lib'...
Listing './lib/python3.5/site-packages/tests/testapp/lib/helpers'...
Listing './lib/python3.5/site-packages/tests/testapp/lib/templates'...
Listing './lib/python3.5/site-packages/tests/testapp/lists'...
Listing './lib/python3.5/site-packages/tests/testapp/shows'...
Listing './lib/python3.5/site-packages/tests/testapp/views'...
Listing './lib/python3.5/site-packages/tests/testapp/views/example'...
Listing './lib/python3.5/site-packages/watchdog'...
Listing './lib/python3.5/site-packages/watchdog/observers'...
Listing './lib/python3.5/site-packages/watchdog/tricks'...
Listing './lib/python3.5/site-packages/watchdog/utils'...
Listing './lib/python3.5/site-packages/watchdog-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './restkit'...
Listing './share'...
Listing './share/python-wheels'...
Listing './socketpool'...
